# eu5-community-mod-menu

./: .gitignore  .ignore  AGENTS.md  README.md
.claude/: settings.local.json
.metadata/: metadata.json
docs/: cmm-search-blocker.md  mod-integration.md  reference-index.md  references.md  wiki-page.wiki
example-mod-1/: README.md
example-mod-2/: README.md
example-mod-3/: README.md
tools/cmm-settings-tool/: README.md  pyproject.toml
tools/cmm-settings-tool/src/cmm_settings_tool/: __main__.py  generator.py  models.py  parser.py  server.py
tools/cmm-settings-tool/src/cmm_settings_tool/static/: index.html
tools/cmm-settings-tool/src/cmm_settings_tool/static/css/: app.css
tools/cmm-settings-tool/src/cmm_settings_tool/static/js/: app.js  generator-preview.js
tools/cmm-settings-tool/src/cmm_settings_tool/static/js/components/: DropdownOptions.js  ListEditor.js  LocalizationPanel.js  ModEditor.js  PreviewPanel.js  SettingEditor.js
tools/cmm-visual-editor/: README.md  pyproject.toml
tools/cmm-visual-editor/src/cmm_visual_editor/: __main__.py  encoding.py  generator.py  models.py  server.py
tools/cmm-visual-editor/src/cmm_visual_editor/static/: index.html
tools/cmm-visual-editor/src/cmm_visual_editor/static/css/: app.css  preview.css
tools/cmm-visual-editor/src/cmm_visual_editor/static/js/: app.js  generator-preview.js
tools/cmm-visual-editor/src/cmm_visual_editor/static/js/components/: CodePanel.js  ListEditor.js  LocalizationPanel.js  SettingEditor.js
tools/cmm-visual-editor/tests/: test_auto_open.py  test_auto_open_e2e.py  test_bat_launcher.py
(+92 files in other folders)
