[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmm-settings-tool"
version = "0.1.0"
description = "Visual editor for creating and managing EU5 Community Mod Menu settings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.scripts]
cmm-settings-tool = "cmm_settings_tool.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_settings_tool"]
